<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_sun"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SunFragment"
    android:background="@color/sunColor">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1"
        >

        <TableRow>

            <TextView
                style="@style/TextColor"
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/latitude"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/latitude"
                style="@style/TextColor"
                android:gravity="end"
                android:padding="3dip"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow>

            <TextView
                style="@style/TextColor"
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/longitude"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/longitude"
                style="@style/TextColor"
                android:gravity="end"
                android:padding="3dip"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

        <TableRow>

            <TextView
                style="@style/TextColor"
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/sunrise"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/sunrise"
                style="@style/TextColor"
                android:gravity="end"
                android:padding="3dip"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow>

            <TextView
                style="@style/TextColor"
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/sunset"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/sunset"
                style="@style/TextColor"
                android:gravity="end"
                android:padding="3dip"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

        <TableRow>

            <TextView
                style="@style/TextColor"
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/azimuth_rise"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/azimuth_rise"
                style="@style/TextColor"
                android:gravity="end"
                android:padding="3dip"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>


        <TableRow>

            <TextView
                style="@style/TextColor"
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/azimuth_set"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/azimuth_set"
                style="@style/TextColor"
                android:gravity="end"
                android:padding="3dip"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

        <TableRow>

            <TextView
                style="@style/TextColor"
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/twilight_evening"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/twilightevening"
                style="@style/TextColor"
                android:gravity="end"
                android:padding="3dip"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow>

            <TextView
                style="@style/TextColor"
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/twilight_morning"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/twilightmorning"
                style="@style/TextColor"
                android:gravity="end"
                android:padding="3dip"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>
    </TableLayout>


</LinearLayout>